Fix CSS to keep the logo from truncating

--- a/rooibos/ui/templates/master.css
+++ b/rooibos/ui/templates/master.css
@@ -56,11 +56,10 @@
 
 #logo {
     background: url({% if LOGO_URL %}{{ LOGO_URL }}{% else %}{% static 'images/mdid_logo.png' %}{% endif %}) no-repeat bottom left;
-    width: 150px;
+    width: 187px;
     height: 50px;
     display: block;
     float: left;
-    margin-left: 10px;
 }
 
 
